<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".Login">

    <ImageView
        android:id="@+id/login_applogo"
        android:layout_width="378dp"
        android:layout_height="215dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/login_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_applogo"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:hint="Phone Number"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_phone_number_input"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="17sp"
        android:textStyle="bold"/>


    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/login_password_input"
        android:layout_marginTop="5dp">

        <com.rey.material.widget.CheckBox
            android:id="@+id/remember_me_chkb"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:gravity="center_vertical"
            android:text="@string/rem"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cbd_strokeColor="@color/colorAccent" />

        <TextView
            android:id="@+id/forget_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:text="@string/fpwd"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:text="@string/log"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="23dp"
        android:text="@string/admin"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="80dp"
        android:text="@string/nadmin"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />


</RelativeLayout>